--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,107 +1,154 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@import url("https://fonts.googleapis.com/css2?family=Hind:wght@300;400;500;600;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+body {
+  font-family: "Hind", sans-serif;
+  font-family: "Inter", sans-serif;
+  background-color: black;
+  /* animation-name: backimg;
+  animation-duration: 2s;
+  animation-iteration-count: 3;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease-in-out; */
+  /* background-image: url("https://res.cloudinary.com/dt0j68vdr/image/upload/v1678794468/Vector_21_2_b9aufz.png");
+  width: "900px";
+  height: "700px";
+  background-repeat: no-repeat; */
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+  
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
+@keyframes animatedBackground {
+  0% {
+    background-position: 0% 80%;
+    /* transform: rotateX(-30deg) rotateY(0deg); */
+  }
+  25% {
+    background-position: 50% 0;
+    /* transform: rotateX(30deg) rotateY(0deg); */
+  }
+  50% {
+    background-position: 10% 50%;
+    /* transform: rotateX(80deg) rotateY(1deg); */
+  }
+  100% {
+    background-position: 100% 10%;
+    /* transform: rotateX(180deg) rotateY(1deg); */
   }
 }
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+#animate-area {
+  width: auto;
+  height: 600px;
+  background-image: url(https://res.cloudinary.com/dt0j68vdr/image/upload/v1678860666/Vector_21_3_r2oupi.png);
+  background-position: 0px 0px;
+  background-repeat: no-repeat;
+  animation: animatedBackground 2s linear infinite alternate;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+/* @keyframes backimg {
+  0% {
+    top: 0px;
+    left: 0px;
   }
+  25% {
+    top: 250px;
+    left: 0px;
+  }
+  25% {
+    top: 250px;
+    left: 250px;
+  }
+  100% {
+    top: 250px;
+    left: 0px;
+  }
+} */
+.child {
+  background-color: darkmagenta;
+  transition: transform 1s ease-in;
+}
+.parent:hover .child {
+  background-color: aqua;
+  animation-fill-mode: 1s forwards;
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    bottom: "-70px";
+    left: "-150px";
+    transition: transform 1s;
+  }
+  65% {
+    opacity: 10;
+    transform: translate(-270%, 800px);
+    transform: rotate(360deg,0deg);
+    width: 250px;
+    height: 180px;
+  }
+  75% {
+    opacity: 10;
+    transform: translate(10%,50%);
+    /* transform: rotate(360deg,0deg); */
+    width: 250px;
+    height: 180px;
+  }
+
+}
+/* absolute -bottom-[70px] -left-[150px] h-[200px] w-[230px] */
+.fade-in {
+  animation-name: fade-in;
+  animation-duration: 20s;
+  animation-fill-mode: forwards;
+}
+
+.rotate_01{
+
+  width: 25px;
+  height: 25px;
+  -webkit-transition: -webkit-transform 1s;
+}
+.djj:hover{
+  background-color: green;
+}
+.djj:hover .rotate_01{
+  background:green
+  ;
+  -webkit-transform: rotate(360deg) translateZ(0);
+}
+
+.cursor{
+  z-index: 999;
+  background: url("https://res.cloudinary.com/dt0j68vdr/image/upload/v1678794468/Vector_21_2_b9aufz.png");
+  position: fixed;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  pointer-events: none;
+  box-shadow: 0 0 20px #269608, 0 0 50px #269608, 0 0 100px #269608;
+animation:colors 5s infinite
+}
+@keyframes colors {
+  0%{
+    filter: hue-rotate(0deg);
+  }
+  100%{
+    filter: hue-rotate(360%);
+  }
+
+}
+.cursor:before{
+  content: "";
+  position: absolute;
+  background: #269608;
+  width: 50px;
+  height: 50px;
+  opacity: 0.2;
+  transform: translate(-30%,-30%);
+  border-radius: 50%;
+
 }
